vlib/v/checker/tests/type_alias_struct_generic_unknown_name_err.vv
module main

struct Foo<T> {
	value T
}

type NewType = Foo<UnknownType>

fn main() {
}
